--- a/codigo.html
+++ b/codigo.html
@@ -181,12 +181,19 @@
 }
 /* Contenedor principal */
 .contenido {
+  display: flex;
+  align-items: flex-start; /* 👈 clave para alinear verticalmente */
+  gap: 10px;
+  width: 100%;
+  box-sizing: border-box;
   margin-top: 120px;
+  flex-wrap: nowrap;
 }
 
 .columna-izquierda {
   flex-basis: 35%;
   max-width: 400px;
+  max-height: 100%;
   background-color: #ffe4ec;
   padding: 10px;
   box-sizing: border-box;
