--- a/codigo.html
+++ b/codigo.html
@@ -15,6 +15,11 @@
       scroll-behavior: smooth;
     }
 
+	html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+	}
+
     /* Cabecera completa del sitio */
     header {
 	position: fixed;
