--- a/codigo.html
+++ b/codigo.html
@@ -33,6 +33,9 @@
 	background-color: #ff99ac;
 	color: white;
 	box-shadow: 0 4px 8px rgb(0,0,0,0.3)
+	box-shadow: 0 4px 8px rgb(0,0,0,0.3);
+	overflow: hidden; /* 🟢 permite que los corazones se queden dentro */
+	    
     }
 
     /* Título principal del sitio */
@@ -577,12 +580,6 @@ perfecto para quien ama la belleza cruda de <br>
 .boton-rosado:hover {
   background-color: #e0558f;
   transform: scale(1.05);
-}
-
-/* Contenedor del header con corazones flotantes */
-header {
-  position: relative; /* importante para que los corazones se ubiquen dentro */
-  overflow: hidden;
 }
 
 /* Corazón animado */
