--- a/codigo.html
+++ b/codigo.html
@@ -492,8 +492,7 @@ perfecto para quien ama la belleza cruda de <br>
  <p><strong>Enviar tu diseño personalizado</strong></p>
  
  <!-- Formulario para enviar imagen -->
- <form id="formulario-imagen" action="https://formsubmit.co/cafe.des.poets@gmail.com" method="POST" enctype="multipart/form-data">
- <!--  <form id="formulario-imagen" action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST" enctype="multipart/form-data"> -->
+ <form id="formulario-imagen" action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST" enctype="multipart/form-data">
    <!-- Seguridad contra robots -->
    <input type="hidden" name="_captcha" value="false">
  
