--- a/codigo.html
+++ b/codigo.html
@@ -33,7 +33,7 @@
 	background-color: #ff99ac;
 	color: white;
 	box-shadow: 0 4px 8px rgb(0,0,0,0.3);
-	overflow: hidden; /* 🟢 permite que los corazones se queden dentro */
+	overflow: visible; /* 🟢 permite que los corazones se queden dentro */
 	    
     }
 
