--- a/codigo.html
+++ b/codigo.html
@@ -30,7 +30,7 @@
 	display: flex; /* usamos flexbox para acomodar los elementos horizontalmente */
 	align-items: flex-start; /* alineamos los elementos al inicio de la parte superior */
 	padding: 20px;
-	background-color: #ff99ac;
+	background-color: #ffd6e8;
 	color: white;
 	box-shadow: 0 4px 8px rgb(0,0,0,0.3);
 	overflow: visible; /* 🟢 permite que los corazones se queden dentro */
@@ -214,10 +214,9 @@
   color: #4a0033;
   padding: 20px;
   box-sizing: border-box;
-  min-width: 0;
-  
-  
+  min-width: 0;  
 }
+	  
 /* Tarjeta de video */
 .video-card {
   background-color: white;
@@ -333,13 +332,11 @@
       <a href="pedido.html">Realizar pedido</a>
       <a href="#formulario-imagen">Enviar diseño</a>
     </nav>
-
-    <!-- Corazones flotantes -->
-    <div class="heart" style="left: 10%; animation-delay: 0s;"></div>
-    <div class="heart" style="left: 25%; animation-delay: 1s;"></div>
-    <div class="heart" style="left: 40%; animation-delay: 2.5s;"></div>
-    <div class="heart" style="left: 60%; animation-delay: 1.2s;"></div>
-    <div class="heart" style="left: 80%; animation-delay: 3.2s;"></div>
+	  <div class="heart" style="left: 10%; animation-delay: 0s;"></div>
+<div class="heart" style="left: 25%; animation-delay: 1s;"></div>
+<div class="heart" style="left: 40%; animation-delay: 2.5s;"></div>
+<div class="heart" style="left: 60%; animation-delay: 1.2s;"></div>
+<div class="heart" style="left: 80%; animation-delay: 3.2s;"></div>
   </div>
 </header>
 
